--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "expo": "~54.0.0",
     "expo-router": "~4.0.0",
-    "react": "18.3.1",
+    "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "@supabase/supabase-js": "^2.57.4",
     "openai": "^4.73.0",
-    "lucide-react-native": "^0.454.0",
+    "lucide-react-native": "^0.555.0",
     "react-native-svg": "15.8.0",
     "react-native-maps": "1.18.0",
     "expo-location": "~18.0.4",
@@ -28,8 +28,13 @@
     "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.0",
     "typescript": "~5.3.3"
+  },
+  "overrides": {
+    "lucide-react-native": {
+      "react": "^19.1.0"
+    }
   },
   "private": true
 }
