--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "expo-router": "~4.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "5.6.2",
-    "react-native-screens": "4.6.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "@supabase/supabase-js": "^2.57.4",
     "openai": "^4.73.0",
     "lucide-react-native": "^0.555.0",
