--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "typescript": "~5.3.3"
   },
   "overrides": {
-    "lucide-react-native": {
-      "react": "^19.1.0"
-    }
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "private": true
 }
